# template-flask

./: .gitignore  README.md  artisan  composer.json  index.html  manage.py  package.json  phpunit.xml  postcss.config.js  pyproject.toml  server.php  vite.config.js
@app/: .env.example
@app/app/Http/: Kernel.php
@app/app/Models/: Permission.php  Role.php  User.php
@app/config/: filesystems.php  fortify.php  hashing.php  sanctum.php
@app/database/migrations/: 2019_12_14_000001_create_personal_access_tokens_table.php  2020_11_16_042033_create_roles_table.php  (+5 more)
app/Console/: Kernel.php
app/Exceptions/: Handler.php
app/Models/: BlogPost.php  GlobalConfig.php  RolePermission.php  UserPermission.php
app/Providers/: AuthServiceProvider.php  BroadcastServiceProvider.php  EventServiceProvider.php  FortifyServiceProvider.php  RouteServiceProvider.php
app/controllers/: __init__.py  posts_controller.py
app/graphql/: __init__.py  schema.py
app/helpers/: serializer.py
app/models/: base.py  post.py  user.py
config/: app.php  application.py  auth.php  broadcasting.php  cache.php  cors.php  database.php  database.py  environment.py  logging.php  mail.php  queue.php  services.php  session.php  view.php
database/factories/: UserFactory.php
database/migrations/: 2014_10_12_200000_add_two_factor_columns_to_users_table.php
database/seeders/: DatabaseSeeder.php
db/: repos.json
lib/tasks/: database.py  graphql.py
resources/: main.js
routes/: web.php
tests/: CreatesApplication.php
tests/Feature/: ExampleTest.php
tests/Unit/: ExampleTest.php
(+38 files in other folders)
